--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  min-height: 100vh;
+  justify-content:center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-size: cover;
+  background-position: center;
 }
 
-.App-link {
-  color: #61dafb;
+@font-face {
+  font-family: RobotoBlack;
+  src: url(./font/Roboto-Black.ttf);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calculator{
+  width: 100%;
+  max-width: 280px;
+  background-color: #22252d;
+  border-radius: 16px;
+  font-family: RobotoBlack;
+}
+
+.display{
+  padding: 28px;
+  display: flex; /* Aggiunto */
+  justify-content: space-between; /* Aggiunto */
+  align-items: center; /* Aggiunto per centrare verticalmente i contenuti */ 
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.display span {
+	font-size: 25px;
+	color: #ffffff;
+}
+
+.keys{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Aggiunto per centrare i button */
+  background-color: #292d36;
+  border-radius: 16px;
+}
+
+.keys button {
+	flex: 0 0 calc(25% - 20px); /* Calcola la larghezza di ogni button con margine */
+  max-width: calc(25% - 20px); /* Imposta la larghezza massima di ogni button */
+  margin: 10px;
+  background-color: #3a414f;
+  color: #ffffff;
+  border-radius: 16px;
+}
+
+button {
+	border: none;
+	padding: 10px;
+	font-size: 13px;
+	transition: 0.4s;
+}
+
+button:hover {
+	opacity: 0.3;
+}
+
+.keys .neon{
+  color:rgb(0, 255, 170)
+}
+
+.keys .operator{
+  color:red
 }
